crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__number__decimal_point_at_eof.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/number/decimal_point_at_eof.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: Unexpected end of file
   ╭─[craftinginterpreters/test/number/decimal_point_at_eof.lox:2:5]
   │
 2 │ 123.
   │     │ 
   │     ╰─ end of file here
───╯
