crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__number__nan_equality.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/number/nan_equality.lox
---
success: true
exit_code: 0
----- stdout -----
false
true
false
true

----- stderr -----
