crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__number__trailing_dot.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/number/trailing_dot.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: at `;`: expected Identifier
   ╭─[craftinginterpreters/test/number/trailing_dot.lox:2:5]
   │
 2 │ 123.;
   │     ─  
───╯
